fix: adjust z-index for popup

--- a/src/sass/components/_popup.scss
+++ b/src/sass/components/_popup.scss
@@ -6,7 +6,7 @@
   height: 100%;
   background-color: rgba($color-blue, 0.8);
   backdrop-filter: blur(0.5rem);
-  z-index: 100;
+  z-index: 1000;
 }
 
 .popup {
@@ -18,7 +18,7 @@
   width: MIN(60rem, 80vw);
 
   min-height: 10rem;
-  z-index: 200;
+  z-index: 2000;
   background-color: $color-white;
   border-radius: 1.5rem;
 
